Fix warnings and errors during maven build and test